test_scripts/errors/multiline_struct_method_error.shm
struct Calculator {
    value
    fn add(self, x) {
        self.value + x;
    }
}
let c = Calculator("not a number");
c.add(5);
