test_scripts/errors/multiline_struct_method_error.stderr
 2 |     value
 3 |     fn add(self, x) {
 4 |         self.value + x;
                        ^
 5 |     }
 6 | }
Error: Operation '+' not supported between not a number and 5
